mobile alignment fixed

--- a/style.css
+++ b/style.css
@@ -570,3 +570,12 @@ a{
         display: none;
     }
 }
+
+@media only screen and (max-width: 480px){
+    .featured{
+        margin-left:12px;
+    }
+    .general-header{
+        margin-left: 10px;
+    }
+}
